# pytest-aioboto3

./: pyproject.toml
pytest_aioboto3/: moto_fixtures.py
