[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-aioboto3"
version = "0.3.0"
description = "Aioboto3 Pytest with Moto"
authors = [
    { name = "Shipwell Engineering", email = "engineering@shipwell.com" },
    { name = "Phillip Verheyden", email = "phillip@shipwell.com" },
    { name = "Constantin Teodorescu", email = "teocns@gmail.com" },
]

dependencies = [
    "aioboto3>=12.0.0",
    "moto>=4.2.3",
    "types-aiobotocore>=2.7.0",
    "requests>=2.0",
    "flask-cors>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytest_aioboto3"]

[tool.hatch.metadata]
allow-direct-references = true



[tool.rye]
managed = true
virtual = false
universal = true

dev-dependencies = [
    "pytest>=7.4.3",
    "boto3-stubs>=1.28.70",
    "pytest-asyncio>=0.21.1",
    "types-aiobotocore-s3>=2.15.2"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
filterwarnings = [
    'error', # treat all warnings as errors
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning", # see https://github.com/aio-libs/aiobotocore/issues/1021#issuecomment-1938713736
]
asyncio_mode = "auto"

[tool.pytest.plugins]
name = "pytest-aioboto3"
version = "0.3.0"
module = "pytest_aioboto3"


